--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles/login.css">
-    <title>Document</title>
+    <title>QuantumLoginpage</title>
 </head>
 
 <body>
